[package]
name = "bobsled"
version = "0.0.0"
authors = ["Jake Swenson <jake@jakeswenson.com>"]
edition = "2018"

license = "RPL-1.5"
description = "An API around Sled for CRUD operations with access to the transaction log for streaming changes"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

build = "build.rs"

[lib]
name = "bobsled"
path = "src/lib/mod.rs"

[[bin]]
name = "api"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
tonic = "0.1"
prost = "0.6"
prost-types = "0.6" # for well-known types
uuid = { version = "0.8", features = ["serde", "v4", "v5"] }
futures = "0.3"
ctrlc = "^3.1"
tokio = { version = "0.2", features = ["macros"] }
sled = "0.31.0"
promptly = "0.3.0"

[build-dependencies]
tonic-build = "0.1.0"
