[package]
name = "bobsled-replication"
version = "0.0.0"
authors = ["Jake Swenson <jake@jakeswenson.com>"]
edition = "2018"

license = "RPL-1.5"
description = "bobsled + replication"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

build = "build.rs"

[[bin]]
name = "replica"
path = "src/replica.rs"

[dependencies]
tonic = "0.1"
prost = "0.6"
prost-types = "0.6" # for well-known types
futures = "0.3"
ctrlc = "^3.1"
tokio = { version = "0.2", features = ["macros"] }
sled = "0.31.0"
promptly = "0.3.0"

[dependencies.bobsled]
path = "../bobsled"

[build-dependencies]
tonic-build = "0.1.0"
